[gd_scene load_steps=11 format=2]

[ext_resource path="res://Card_Factory/Card.gd" type="Script" id=1]
[ext_resource path="res://Card_Factory/nano.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Card_Factory/Textures/Artworks/Placeholder.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=4]
resource_local_to_scene = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=6]
resource_local_to_scene = true
bg_color = Color( 0.717647, 0.717647, 0.717647, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 22
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=5]
resource_local_to_scene = true
bg_color = Color( 0.717647, 0.717647, 0.717647, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 15
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
resource_local_to_scene = true
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Card_Template" type="MarginContainer"]
margin_right = 250.0
margin_bottom = 350.0
rect_min_size = Vector2( 250, 350 )
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]
margin_right = 250.0
margin_bottom = 350.0
custom_styles/panel = SubResource( 4 )

[node name="Architecture" type="VBoxContainer" parent="."]
margin_right = 250.0
margin_bottom = 350.0

[node name="Top_Margin" type="MarginContainer" parent="Architecture"]
margin_right = 250.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )

[node name="Name_Container" type="HBoxContainer" parent="Architecture"]
margin_top = 18.0
margin_right = 250.0
margin_bottom = 43.0

[node name="Left_Margin" type="MarginContainer" parent="Architecture/Name_Container"]
margin_right = 20.0
margin_bottom = 25.0
rect_min_size = Vector2( 20, 0 )

[node name="Panel" type="Panel" parent="Architecture/Name_Container"]
margin_left = 24.0
margin_right = 226.0
margin_bottom = 25.0
rect_min_size = Vector2( 202, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 6 )

[node name="Name" type="Label" parent="Architecture/Name_Container/Panel"]
margin_right = 202.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/font = SubResource( 2 )
text = "Name"
align = 1
valign = 1

[node name="Right_Margin" type="MarginContainer" parent="Architecture/Name_Container"]
margin_left = 230.0
margin_right = 250.0
margin_bottom = 25.0
rect_min_size = Vector2( 20, 0 )

[node name="Mid_Top_Margin" type="MarginContainer" parent="Architecture"]
margin_top = 47.0
margin_right = 250.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 1 )

[node name="Artwork_Container" type="HBoxContainer" parent="Architecture"]
margin_top = 52.0
margin_right = 250.0
margin_bottom = 202.0
rect_min_size = Vector2( 0, 150 )

[node name="Left_Margin" type="MarginContainer" parent="Architecture/Artwork_Container"]
margin_right = 20.0
margin_bottom = 150.0
rect_min_size = Vector2( 20, 0 )

[node name="Artwork_Frame" type="MarginContainer" parent="Architecture/Artwork_Container"]
margin_left = 24.0
margin_right = 226.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Architecture/Artwork_Container/Artwork_Frame"]
margin_right = 202.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 1 )

[node name="Artwork" type="Sprite" parent="Architecture/Artwork_Container/Artwork_Frame/Panel"]
position = Vector2( 101, 75 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="Right_Margin" type="MarginContainer" parent="Architecture/Artwork_Container"]
margin_left = 230.0
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 20, 0 )

[node name="Mid_Bottom_Margin" type="MarginContainer" parent="Architecture"]
margin_top = 206.0
margin_right = 250.0
margin_bottom = 207.0
rect_min_size = Vector2( 0, 1 )

[node name="Effect_Container" type="HBoxContainer" parent="Architecture"]
margin_top = 211.0
margin_right = 250.0
margin_bottom = 332.0
rect_min_size = Vector2( 0, 121 )

[node name="Left_Margin" type="MarginContainer" parent="Architecture/Effect_Container"]
margin_right = 20.0
margin_bottom = 121.0
rect_min_size = Vector2( 20, 0 )

[node name="Panel" type="Panel" parent="Architecture/Effect_Container"]
margin_left = 24.0
margin_right = 226.0
margin_bottom = 121.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 5 )

[node name="Effect" type="Label" parent="Architecture/Effect_Container/Panel"]
margin_left = 5.0
margin_right = 196.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "Choose any two players with at least one Card in hand (other than this card):
They swap hands."
align = 1
valign = 1
autowrap = true

[node name="Right_Margin" type="MarginContainer" parent="Architecture/Effect_Container"]
margin_left = 230.0
margin_right = 250.0
margin_bottom = 121.0
rect_min_size = Vector2( 20, 0 )

[node name="Bottom_Margin" type="MarginContainer" parent="Architecture"]
margin_top = 336.0
margin_right = 250.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 14 )

[node name="Cover" type="Panel" parent="."]
margin_right = 250.0
margin_bottom = 350.0
custom_styles/panel = SubResource( 7 )
